--- a/public/back-end/assets/css/style.css
+++ b/public/back-end/assets/css/style.css
@@ -1,7 +1,10 @@
 /* d-flex justify-content-center align-items-center gap-2 */
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+@import url("https://fonts.googleapis.com/css?family=Karla:400,700");
 .brandsCustomDesign{
     display: flex;
-    justify-content: center;
+    padding: 0 20px;
+    justify-content: space-between;
     align-items: center;
     gap: 10px;
 }
@@ -11,4 +14,31 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+}
+.brand-card{
+    position: relative;
+    padding-top: 10px;
+}
+
+.brand-card .brandLogo{
+    height: 200px;
+    object-fit: cover;
+   
+}
+.cardTitle{
+    font-size: 18px;
+    font-family: "Roboto";
+    font-weight: 400;
+    text-align: center;
+}
+.brandsManage{
+    position: absolute;
+    right: 40px;
+    top: 15px;
+}
+.brandsManageDesign{
+    display: flex;
+    background: #FFF;
+    flex-direction: column;
+    
 }
