add btn postion

--- a/public/back-end/assets/css/style.css
+++ b/public/back-end/assets/css/style.css
@@ -46,3 +46,11 @@
 .note-btn {
     color: #000;
 }
+.variantsForms{
+    position: relative;
+}
+#addVariant {
+    position: absolute;
+    right: 0px;
+    top: 45px;
+}
